Fixed #3903 - Calendar: Material theme icons not visible

--- a/public/themes/mdc-dark-indigo/theme.css
+++ b/public/themes/mdc-dark-indigo/theme.css
@@ -6257,6 +6257,9 @@
 .p-calendar-w-btn .p-datepicker-trigger.p-button span {
   color: rgba(255, 255, 255, 0.6);
 }
+.p-calendar-w-btn .p-datepicker-trigger.p-button .p-icon path {
+  fill: rgba(255, 255, 255, 0.6);
+}
 .p-calendar-w-btn .p-datepicker-trigger.p-button:enabled:hover {
   background: rgba(255, 255, 255, 0.04);
 }
